// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flyout should render correctly 1`] = `
<div
  className="sc-bxivhb jrcNjb Flyout"
>
  <div
    className="sc-htpNat cSppWP Flyout__button-wrapper"
    onClick={[Function]}
  >
    Flyout
  </div>
</div>
`;

exports[`Flyout should render with button content correctly 1`] = `
<div
  className="sc-bxivhb jrcNjb Flyout"
>
  <div
    className="sc-htpNat cSppWP Flyout__button-wrapper"
    onClick={[Function]}
  >
    <span>
      sample-button-text
    </span>
  </div>
</div>
`;
